# Xion_CollabSpace

./: .gitignore  DESCRIPTION.md  README.md  Readme.md  package-lock.json
client/: .env  README.md  bun.lockb  example.env  index.html  package.json  tailwind.config.ts
client/src/: App.tsx  global.css  index.css  main.tsx
client/src/components/: AppSidebar.tsx  Layout.tsx  Loading.tsx  PrivateRoute.tsx  ProfileEditDialog.tsx  ProjectFormDialog.tsx  RegistrationDialog.tsx  Shimmer.tsx  ThemeToggle.tsx
client/src/components/loadingSkeletons/: DashboardSkeleton.tsx  IdeasSkeleton.tsx  ProfileSkeleton.tsx  ProjectDetailSkeleton.tsx  ProjectsSkeleton.tsx
client/src/components/ui/: badge.tsx  toast.tsx
client/src/context/: AuthContext.tsx  ThemeContext.tsx
client/src/hooks/: useAuthIntegration.ts
client/src/lib/: api.ts  constants.ts
client/src/pages/: Dashboard.tsx  Ideas.tsx  Index.tsx  NotFound.tsx  Profile.tsx  ProjectDetail.tsx  Projects.tsx  Timeline.tsx
client/src/types/: index.ts
contract/: README.md
contract/project_management/: Cargo.toml
contract/project_management/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
server/: .gitignore  README.md  auth.js  bun.lockb  db.js  example.env  index.js  package-lock.json  package.json  profile.js  project_details.js  user_data.js
server/middleware/: auth.js
src/: App.tsx  main.tsx
src/components/: Layout.tsx
src/context/: ThemeContext.tsx
src/pages/: Dashboard.tsx  Index.tsx  NotFound.tsx  Profile.tsx  ProjectDetail.tsx  Projects.tsx
(+5 files in other folders)
