[package]
name = "project-management"
version = "0.1.0"
authors = ["Aditya Srivastava"]
edition = "2021"
description = "Contract for project management functionality"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
# path = "src/contract.rs"

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.3.1"
cosmwasm-std = "1.3.1"
cosmwasm-storage = "1.3.1"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
thiserror = "1.0.44"

[dev-dependencies]
cw-multi-test = "0.17.0"
